--- a/graficasIndicadores/gerencia.html
+++ b/graficasIndicadores/gerencia.html
@@ -243,7 +243,7 @@ Highcharts.chart('depositosPorDivision', {
         }
     },
     series: [{
-        name: 'Brands',
+        name: 'Depositos',
         colorByPoint: true,
         data:[{
   name: 'NOROESTE',
@@ -303,7 +303,7 @@ Highcharts.chart('retirosPorDivision', {
         }
     },
     series: [{
-        name: 'Brands',
+        name: 'Retiros',
         colorByPoint: true,
         data:[{
   name: 'OCCIDENTE',
@@ -363,29 +363,24 @@ Highcharts.chart('Top5TransaEstados', {
         }
     },
     series: [{
-        name: 'Brands',
+        name: 'Fallas',
         colorByPoint: true,
-        data: [{
-            name: 'Chrome',
-            y: 74.77,
-            sliced: true,
-            selected: true
-        },  {
-            name: 'Edge',
-            y: 12.82
-        },  {
-            name: 'Firefox',
-            y: 4.63
-        }, {
-            name: 'Safari',
-            y: 2.44
-        }, {
-            name: 'Internet Explorer',
-            y: 2.02
-        }, {
-            name: 'Other',
-            y: 3.28
-        }]
+        data:[{
+  name: 'Jalisco',
+  y: 420
+}, {
+  name: 'COLIMA',
+  y: 7972
+}, {
+  name: 'TLAXCALA',
+  y: 9436
+}, {
+  name: 'CAMPECHE',
+  y: 11368
+}, {
+  name: 'NAYARIT',
+  y: 13511
+}]
     }]
 });
 
